# SPS_SABRE_EventBuilder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  input.txt  makefile  premake5.lua
etc/: ChannelMap_Feb2021_SABRE.txt  ChannelMap_March2020_newFormat_092020.txt  ChannelMap_Nov2020_50Tidp.txt  CutList_Feb2021_10B3hea.txt  CutList_March2020.txt  CutList_Nov2020_50Tidp.txt  Plotter.C  SabreSingles.C  ScalerFile.txt  ScalerFile_Feb2021_SABRE.txt  ShiftMap_April2020_newFormat_10102020.txt  ShiftMap_Feb2021_SABRE.txt  ShiftMap_Nov2020_50Tidp.txt  default_input.txt  logo.txt  mass.txt  new_CutList_Feb202110B3hea.txt  orig_ScalerFile_Feb2021_SABRE.txt  orig_ShiftMap_Feb2021_SABRE.txt
example/cuts/: .gitignore
include/: .gitignore  ChannelMap.h  CompassFile.h  CompassHit.h  CompassRun.h  CutHandler.h  DataStructs.h  EVBApp.h  EVBMainFrame.h  EventBuilder.h  FastSort.h  FlagHandler.h  GWMEventBuilder.h  LinkDef_sps.h  MassLookup.h  OrderChecker.h  RunCollector.h  SFPAnalyzer.h  SFPPlotter.h  ShiftMap.h  SlowSort.h  Stopwatch.h
lib/: .gitignore
objs/: .gitignore
src/: .gitignore  CMakeLists.txt  EventBuilder.cpp  EventBuilder.h  gui_main.cpp  main.cpp
src/evb/: CMakeLists.txt  ChannelMap.cpp  ChannelMap.h  CompassFile.cpp  CompassFile.h  CompassHit.h  CompassRun.cpp  CompassRun.h  CutHandler.cpp  CutHandler.h  EVBApp.cpp  EVBApp.h  EVBParameters.h  EVBWorkspace.cpp  EVBWorkspace.h  FP_kinematics.cpp  FP_kinematics.h  FastSort.cpp  FastSort.h  FlagHandler.cpp  FlagHandler.h  GWMEventBuilder.cpp  Logger.cpp  Logger.h  MassLookup.cpp  MassLookup.h  OrderChecker.cpp  OrderChecker.h  ProgressCallback.h  RunCollector.cpp  RunCollector.h  SFPAnalyzer.cpp  SFPAnalyzer.h  SFPPlotter.cpp  SFPPlotter.h  ShiftMap.cpp  ShiftMap.h  SlowSort.cpp  SlowSort.h  Stopwatch.cpp  (+1 more)
src/gui/: EVBMainFrame.cpp  FileViewFrame.cpp
src/guidict/: CMakeLists.txt  EVBMainFrame.cpp  EVBMainFrame.h  FileViewFrame.cpp  FileViewFrame.h  LinkDef_Gui.h
src/spsdict/: CMakeLists.txt  DataStructs.cpp  DataStructs.h
